Add retina imgs to draugiem.lv case study

--- a/portfolio/_posts/2018-03-06-draugiem.html
+++ b/portfolio/_posts/2018-03-06-draugiem.html
@@ -44,7 +44,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV Programma wireframe" src="/img/portfolio/draugiem/draugiem-desktop-tvguide-wireframes.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvguide-wireframes.png 1069w, /img/portfolio/draugiem/draugiem-desktop-tvguide-wireframes@2x.png 2128w" sizes="(max-width: 1300px) 90vw, 70vw>
+						<img alt="TV Programma wireframe" src="/img/portfolio/draugiem/draugiem-desktop-tvguide-wireframes.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvguide-wireframes.png 1064w, /img/portfolio/draugiem/draugiem-desktop-tvguide-wireframes@2x.png 2128w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>TV Programmas wireframes</figcaption>
 					</figure>
 				</div>
@@ -53,19 +53,19 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="F formas satura izkārtojums" src="/img/portfolio/draugiem/draugiem-desktop-tvguide-fshape.png">
+						<img alt="F formas satura izkārtojums" src="/img/portfolio/draugiem/draugiem-desktop-tvguide-fshape.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvguide-fshape.png 1064w, /img/portfolio/draugiem/draugiem-desktop-tvguide-fshape@2x.png 2128w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>&ldquo;F&rdquo; formas satura izkārtojums</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV Programmas dizains" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="TV Programmas dizains" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png 1103w, /img/portfolio/draugiem-desktop-tvprogramma@2x.png 2206w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
 						<figcaption>TV Programmas sākumlapa</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV atgādinājumi" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="TV atgādinājumi" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png 1104w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
 						<figcaption>TV Programmas atgādinājuma pievienošana</figcaption>
 					</figure>
 				</div>
@@ -74,7 +74,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV Programma Šodien" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="TV Programma Šodien" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png 1010w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien@2x.png 2020w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
 						<figcaption>TV Programmas kartiņa sadaļā &ldquo;Šodien&rdquo;</figcaption>
 					</figure>
 				</div>
@@ -89,7 +89,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Mūzikas atskaņotājs" src="/img/portfolio/draugiem/draugiem-desktop-muzika.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Mūzikas atskaņotājs" src="/img/portfolio/draugiem/draugiem-desktop-muzika.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika.png 1104w, /img/portfolio/draugiem/draugiem-desktop-muzika@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
 						<figcaption>Mūzikas atskaņotājs</figcaption>
 					</figure>
 				</div>
@@ -98,13 +98,13 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Runā ieraksts" src="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Runā ieraksts" src="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png 1104w, /img/portfolio/draugiem/draugiem-desktop-muzika-runa@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
 						<figcaption>Runā ieraksts publicējot jaunu dziesmu</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Kompakts mūzikas atskaņotājs" src="/img/portfolio/draugiem/draugiem-desktop-muzika-player.png">
+						<img alt="Kompakts mūzikas atskaņotājs" src="/img/portfolio/draugiem/draugiem-desktop-muzika-player.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika-player.png 1064w, /img/portfolio/draugiem/draugiem-desktop-muzika-player@2x.png 2128w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Mūzikas atskaņotāja kompaktā versija</figcaption>
 					</figure>
 				</div>
@@ -142,7 +142,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Braucam kopā wireframes" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-wireframes.png">
+						<img alt="Braucam kopā wireframes" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-wireframes.png" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-wireframes.png 1064w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa-wireframes@2x.png 2128w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>&ldquo;Braucam kopā&rdquo; sadaļas izkārtojuma varianti</figcaption>
 					</figure>
 				</div>
@@ -151,13 +151,13 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Braucam kopā" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Braucam kopā" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png" class="figure-bordered figure-padded figure-shadowed" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png 1104w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>&ldquo;Braucam kopā&rdquo; sadaļas sākumlapa</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Jauns brauciens" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Jauns brauciens" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png 1104w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
 						<figcaption>Jauna brauciena pievienošana</figcaption>
 					</figure>
 				</div>
@@ -182,13 +182,13 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<a href="/img/portfolio/draugiem/draugiem-android-feed.png"><img alt="Draugiem.lv Android Runā" src="/img/portfolio/draugiem/draugiem-android-feed.png"></a>
+						<img alt="Draugiem.lv Android Runā" src="/img/portfolio/draugiem/draugiem-android-feed.png" srcset="/img/portfolio/draugiem/draugiem-android-feed.png 1200w, /img/portfolio/draugiem/draugiem-android-feed@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Runā ieraksta izveide un lietotāju atzīmēšana</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<a href="/img/portfolio/draugiem/draugiem-android-invitations.png"><img alt="Draugiem.lv Android uzaicinājumi" src="/img/portfolio/draugiem/draugiem-android-invitations.png"></a>
+						<img alt="Draugiem.lv Android uzaicinājumi" src="/img/portfolio/draugiem/draugiem-android-invitations.png" srcset="/img/portfolio/draugiem/draugiem-android-invitations.png 1200w, /img/portfolio/draugiem/draugiem-android-invitations@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Uzaicinājumu sadaļa un draudzības uzaicinājuma nosūtīšana</figcaption>
 					</figure>
 				</div>
@@ -202,16 +202,16 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="xlarge-pull-2 xlarge-push-2">
 					<div class="small-6 large-3">
-						<img class="figure-shadowed-heavy figure-mobile-screen-margin-bottom" alt="Draugiem.lv Android vēstules" src="/img/portfolio/draugiem/draugiem-android-msgs-single.png">
+						<img class="figure-shadowed-heavy figure-mobile-screen-margin-bottom" alt="Draugiem.lv Android vēstules" src="/img/portfolio/draugiem/draugiem-android-msgs-single.png" srcset="/img/portfolio/draugiem/draugiem-android-msgs-single.png 360w, /img/portfolio/draugiem/draugiem-android-msgs-single@2x.png 720w" sizes="(max-width: 1300px) 90vw, 70vw">
 					</div>
 					<div class="small-6 large-3">
-						<img class="figure-shadowed-heavy figure-mobile-screen-margin-bottom" src="/img/portfolio/draugiem/draugiem-android-msgs-bottom-sheet.png" alt="Draugiem.lv Android vēstules izvēlne">
+						<img class="figure-shadowed-heavy figure-mobile-screen-margin-bottom" src="/img/portfolio/draugiem/draugiem-android-msgs-bottom-sheet.png" srcset="/img/portfolio/draugiem/draugiem-android-msgs-bottom-sheet.png 360w, /img/portfolio/draugiem/draugiem-android-msgs-bottom-sheet@2x.png 720w" sizes="(max-width: 1300px) 90vw, 70vw" alt="Draugiem.lv Android vēstules izvēlne">
 					</div>
 					<div class="small-6 large-3">
-						<img class="figure-shadowed-heavy" alt="Draugiem.lv Android vēstules emocijas" src="/img/portfolio/draugiem/draugiem-android-msgs-add-reaction.png" alt="Draugiem.lv Android emocijas">
+						<img class="figure-shadowed-heavy" alt="Draugiem.lv Android vēstules emocijas" src="/img/portfolio/draugiem/draugiem-android-msgs-add-reaction.png" srcset="/img/portfolio/draugiem/draugiem-android-msgs-add-reaction.png 360w, /img/portfolio/draugiem/draugiem-android-msgs-add-reaction@2x.png 720w" sizes="(max-width: 1300px) 90vw, 70vw" alt="Draugiem.lv Android emocijas">
 					</div>
 					<div class="small-6 large-3">
-						<img class="figure-shadowed-heavy" alt="GDraugiem.lv Android vēstules emociju saraksts" src="/img/portfolio/draugiem/draugiem-android-msgs-reactions-list.png" alt="Draugiem.lv Android emociju saraksts">
+						<img class="figure-shadowed-heavy" alt="Draugiem.lv Android vēstules emociju saraksts" src="/img/portfolio/draugiem/draugiem-android-msgs-reactions-list.png" srcset="/img/portfolio/draugiem/draugiem-android-msgs-reactions-list.png 360w, /img/portfolio/draugiem/draugiem-android-msgs-reactions-list@2x.png 720w" sizes="(max-width: 1300px) 90vw, 70vw" alt="Draugiem.lv Android emociju saraksts">
 					</div>
 				</div>
 			</div>
@@ -220,7 +220,7 @@ nextPost: /portfolio/bruklene
 			<div class="page-width">
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<a href="/img/portfolio/draugiem/draugiem-android-events.png"><img alt="Draugiem.lv Android pasākumi" src="/img/portfolio/draugiem/draugiem-android-events.png"></a>
+						<img alt="Draugiem.lv Android pasākumi" src="/img/portfolio/draugiem/draugiem-android-events.png" srcset="/img/portfolio/draugiem/draugiem-android-events.png 1200w, /img/portfolio/draugiem/draugiem-android-events@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Pasākumu sadaļas sākumskats un atvērts pasākums</figcaption>
 					</figure>
 				</div>
