Add retina imgs to bruklene case study

--- a/portfolio/_posts/2018-03-05-bruklene.html
+++ b/portfolio/_posts/2018-03-05-bruklene.html
@@ -35,7 +35,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12 medium-centered cfix">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img src="/img/portfolio/bruklene/bruklene-moodboard.jpg" alt="Brüklene moodboard"></a>
+						<img src="/img/portfolio/bruklene/bruklene-moodboard.jpg" alt="Brüklene moodboard" srcset="/img/portfolio/bruklene/bruklene-moodboard.jpg 1066w, /img/portfolio/bruklene/bruklene-moodboard@2x.jpg 2132w" sizes="(max-width: 1300px) 90vw, 70vw"></a>
 						<figcaption>Identitātes sajūtu kolāža. Attēli no <a href="https://unsplash.com/">unsplash.com</a></figcaption>
 					</figure>
 				</div>
@@ -141,7 +141,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12">
 					<figure>
-						<img alt="brüklene logo" src="/img/portfolio/bruklene/bruklene-logo.png">
+						<img alt="brüklene logo" src="/img/portfolio/bruklene/bruklene-logo.png" srcset="/img/portfolio/bruklene/bruklene-logo.png 912w, /img/portfolio/bruklene/bruklene-logo@2x.png 1824w" sizes="(max-width: 1300px) 90vw, 70vw">
 					</figure>
 				</div>
 			</div>
@@ -160,7 +160,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-www-landing.png"><img alt="Sākumlapas dizains" src="/img/portfolio/bruklene/bruklene-www-landing.png" class="figure-bordered figure-padded figure-shadowed"></a>
+						<img alt="Sākumlapas dizains" src="/img/portfolio/bruklene/bruklene-www-landing.png" class="figure-bordered figure-padded figure-shadowed" srcset="/img/portfolio/bruklene/bruklene-www-landing.png 1260w, /img/portfolio/bruklene/bruklene-www-landing@2x.png 2520w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Sākumlapa</figcaption>
 					</figure>
 				</div>
@@ -170,7 +170,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-www-single-product.png"><img alt="Atvērta produkta skats" src="/img/portfolio/bruklene/bruklene-www-single-product.png" class="figure-bordered figure-padded figure-shadowed"></a>
+						<img alt="Atvērta produkta skats" src="/img/portfolio/bruklene/bruklene-www-single-product.png" class="figure-bordered figure-padded figure-shadowed" srcset="/img/portfolio/bruklene/bruklene-www-single-product.png 1260w, /img/portfolio/bruklene/bruklene-www-single-product@2x.png 2520w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Atvērta produkta skats</figcaption>
 					</figure>
 				</div>
@@ -180,7 +180,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-www-basket.png"><img alt="Pirkumu grozs" src="/img/portfolio/bruklene/bruklene-www-basket.png" class="figure-bordered figure-padded figure-shadowed"></a>
+						<img alt="Pirkumu grozs" src="/img/portfolio/bruklene/bruklene-www-basket.png" class="figure-bordered figure-padded figure-shadowed" srcset="/img/portfolio/bruklene/bruklene-www-basket.png 1260w, /img/portfolio/bruklene/bruklene-www-basket@2x.png 2520w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Pirkumu grozs</figcaption>
 					</figure>
 				</div>
@@ -190,7 +190,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-www-our-story.png"><img alt="Mūsu stāsts" src="/img/portfolio/bruklene/bruklene-www-our-story.png" class="figure-bordered figure-padded figure-shadowed"></a>
+						<img alt="Mūsu stāsts" src="/img/portfolio/bruklene/bruklene-www-our-story.png" class="figure-bordered figure-padded figure-shadowed" srcset="/img/portfolio/bruklene/bruklene-www-our-story.png 1260w, /img/portfolio/bruklene/bruklene-www-our-story@2x.png 2520w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Mūsu stāsts</figcaption>
 					</figure>
 				</div>
@@ -205,15 +205,15 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-mob-handheld.jpg"><img alt="Mobilā aplikācija dizains" src="/img/portfolio/bruklene/bruklene-mob-handheld.jpg"></a>
+						<img alt="Mobilā aplikācija dizains" src="/img/portfolio/bruklene/bruklene-mob-handheld.jpg">
 						<figcaption>Mobilās versijas sākumskats</figcaption>
 					</figure>
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-mob-1.png"><img alt="Mobilais internete veikals" src="/img/portfolio/bruklene/bruklene-mob-1.png"></a>
+						<img alt="Mobilais internete veikals" src="/img/portfolio/bruklene/bruklene-mob-1.png" srcset="/img/portfolio/bruklene/bruklene-mob-1.png 1200w, /img/portfolio/bruklene/bruklene-mob-1@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Mobilās versijas sākumskats un atvērta produkta skats</figcaption>
 					</figure>
 					<figure>
-						<a href="/img/portfolio/bruklene/bruklene-mob-2.png"><img alt="" src="/img/portfolio/bruklene/bruklene-mob-2.png"></a>
+						<img alt="" src="/img/portfolio/bruklene/bruklene-mob-2.png" srcset="/img/portfolio/bruklene/bruklene-mob-2.png 1200w, /img/portfolio/bruklene/bruklene-mob-2@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Pirkumu grozs un &ldquo;Mūsu stāsts&rdquo;</figcaption>
 					</figure>
 				</div>
