Fix typo in brulene case study

--- a/portfolio/_posts/2018-03-05-bruklene.html
+++ b/portfolio/_posts/2018-03-05-bruklene.html
@@ -35,7 +35,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="small-12 medium-centered cfix">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img src="/img/portfolio/bruklene/bruklene-moodboard.jpg" alt="Brüklene moodboard" srcset="/img/portfolio/bruklene/bruklene-moodboard.jpg 1066w, /img/portfolio/bruklene/bruklene-moodboard@2x.jpg 2132w" sizes="(max-width: 1300px) 90vw, 70vw"></a>
+						<img src="/img/portfolio/bruklene/bruklene-moodboard.jpg" alt="Brüklene moodboard" srcset="/img/portfolio/bruklene/bruklene-moodboard.jpg 1066w, /img/portfolio/bruklene/bruklene-moodboard@2x.jpg 2132w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Identitātes sajūtu kolāža. Attēli no <a href="https://unsplash.com/">unsplash.com</a></figcaption>
 					</figure>
 				</div>
