Add retina imgs to zip.lv case study

--- a/portfolio/_posts/2018-03-04-zip.html
+++ b/portfolio/_posts/2018-03-04-zip.html
@@ -40,7 +40,7 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/zip/zip-mob-landing.png"><img alt="Mobilā aplikācija dizains" src="/img/portfolio/zip/zip-mob-landing.png"></a>
+						<img alt="Mobilā aplikācija dizains" src="/img/portfolio/zip/zip-mob-landing.png" srcset="/img/portfolio/zip/zip-mob-landing.png 1200w, /img/portfolio/zip/zip-mob-landing@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Mibilās versijas sākumlapa</figcaption>
 					</figure>
 				</div>
@@ -50,7 +50,7 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/zip/zip-mob-ads.png"><img alt="Sludinājumu saraksts" src="/img/portfolio/zip/zip-mob-ads.png"></a>
+						<img alt="Sludinājumu saraksts" src="/img/portfolio/zip/zip-mob-ads.png" srcset="/img/portfolio/zip/zip-mob-ads.png 1200w, /img/portfolio/zip/zip-mob-ads@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Sludinājumu saraksts nekustamo īpašumu apakšsadaļā</figcaption>
 					</figure>
 				</div>
@@ -105,7 +105,7 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/zip/zip-mob-sorting.png"><img alt="Sludinājumu atlase" src="/img/portfolio/zip/zip-mob-sorting.png"></a>
+						<img alt="Sludinājumu atlase" src="/img/portfolio/zip/zip-mob-sorting.png" srcset="/img/portfolio/zip/zip-mob-sorting.png 1200w, /img/portfolio/zip/zip-mob-sorting2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Sludinājumu atlase un kārtošana</figcaption>
 					</figure>
 				</div>
@@ -120,13 +120,13 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="xlarge-pull-2 xlarge-push-2">
 					<div class="small-12 medium-4">
-						<img class="figure-shadowed-heavy" alt="Mobilais meklētājs" src="/img/portfolio/zip/zip-mob-search-active.png">
+						<img class="figure-shadowed-heavy" alt="Mobilais meklētājs" src="/img/portfolio/zip/zip-mob-search-active.png" srcset="/img/portfolio/zip/zip-mob-search-active.png 1200w, /img/portfolio/zip/zip-mob-search-active@2x.png 2400w" sizes="(max-width: 600px) 90vw, 25vw">
 					</div>
 					<div class="small-12 medium-4">
-						<img class="figure-shadowed-heavy" alt="Mobilais meklētājs vēsture" src="/img/portfolio/zip/zip-mob-search-history.png">
+						<img class="figure-shadowed-heavy" alt="Mobilais meklētājs vēsture" src="/img/portfolio/zip/zip-mob-search-history.png" srcset="/img/portfolio/zip/zip-mob-search-history.png 1200w, /img/portfolio/zip/zip-mob-search-history@2x.png 2400w" sizes="(max-width: 600px) 90vw, 25vw">
 					</div>
 					<div class="small-12 medium-4">
-						<img class="figure-shadowed-heavy" alt="Meklēšanas rezultāti" src="/img/portfolio/zip/zip-mob-search-results.png">
+						<img class="figure-shadowed-heavy" alt="Meklēšanas rezultāti" src="/img/portfolio/zip/zip-mob-search-results.png" srcset="/img/portfolio/zip/zip-mob-search-results.png 1200w, /img/portfolio/zip/zip-mob-search-results@2x.png 2400w" sizes="(max-width: 600px) 90vw, 25vw">
 					</div>
 				</div>
 			</div>
@@ -140,7 +140,7 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/zip/zip-mob-new-ad.png"><img alt="Sludinājuma pievienošana" src="/img/portfolio/zip/zip-mob-new-ad.png"></a>
+						<img alt="Sludinājuma pievienošana" src="/img/portfolio/zip/zip-mob-new-ad.png" srcset="/img/portfolio/zip/zip-mob-new-ad.png 1200w, /img/portfolio/zip/zip-mob-new-ad@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Jauna sludinājuma pievienošanas forma</figcaption>
 					</figure>
 				</div>
@@ -155,25 +155,25 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="small-12">
 					<figure class="centered">
-						<a href="/img/portfolio/zip/zip-tablet-landing.png"><img class="figure-bordered" alt="Zip.lv sākumlapa" src="/img/portfolio/zip/zip-tablet-landing.png"></a>
+						<img class="figure-bordered" alt="Zip.lv sākumlapa" src="/img/portfolio/zip/zip-tablet-landing.png" srcset="/img/portfolio/zip/zip-tablet-landing.png 768w, /img/portfolio/zip/zip-tablet-landing@2x.png 1536w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Sākumlapa</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="centered">
-						<a href="/img/portfolio/zip/zip-tablet-posts-list.png"><img class="figure-bordered" alt="Zip.lv sludinājumi" src="/img/portfolio/zip/zip-tablet-posts-list.png"></a>
+						<img class="figure-bordered" alt="Zip.lv sludinājumi" src="/img/portfolio/zip/zip-tablet-posts-list.png" srcset="/img/portfolio/zip/zip-tablet-posts-list.png 768w, /img/portfolio/zip/zip-tablet-posts-list@2x.png 1536w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Sludinājumu saraksts</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="centered">
-						<a href="/img/portfolio/zip/zip-tablet-single-post.png"><img class="figure-bordered" alt="Zip.lv sludinājums" src="/img/portfolio/zip/zip-tablet-single-post.png"></a>
+						<img class="figure-bordered" alt="Zip.lv sludinājums" src="/img/portfolio/zip/zip-tablet-single-post.png" srcset="/img/portfolio/zip/zip-tablet-single-post.png 768w, /img/portfolio/zip/zip-tablet-single-post@2x.png 1536w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Atvērts sludinājums</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="centered">
-						<a href="/img/portfolio/zip/zip-tablet-my-posts.png"><img class="figure-bordered" alt="Zip.lv mans profils" src="/img/portfolio/zip/zip-tablet-my-posts.png"></a>
+						<img class="figure-bordered" alt="Zip.lv mans profils" src="/img/portfolio/zip/zip-tablet-my-posts.png" srcset="/img/portfolio/zip/zip-tablet-my-posts.png 1200w, /img/portfolio/zip/zip-tablet-my-posts@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Mani pievienotie sludinājumi</figcaption>
 					</figure>
 				</div>
