--- a/portfolio/_posts/2018-03-04-zip.html
+++ b/portfolio/_posts/2018-03-04-zip.html
@@ -105,7 +105,7 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="small-12">
 					<figure>
-						<img alt="Sludinājumu atlase" src="/img/portfolio/zip/zip-mob-sorting.png" srcset="/img/portfolio/zip/zip-mob-sorting.png 1200w, /img/portfolio/zip/zip-mob-sorting2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
+						<img alt="Sludinājumu atlase" src="/img/portfolio/zip/zip-mob-sorting.png" srcset="/img/portfolio/zip/zip-mob-sorting.png 1200w, /img/portfolio/zip/zip-mob-sorting@2x.png 2400w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>Sludinājumu atlase un kārtošana</figcaption>
 					</figure>
 				</div>
