Romove borders around screenshots

--- a/portfolio/_posts/2018-03-06-draugiem.html
+++ b/portfolio/_posts/2018-03-06-draugiem.html
@@ -59,13 +59,13 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV Programmas dizains" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png 1103w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma@2x.png 2206w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="TV Programmas dizains" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma.png 1103w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma@2x.png 2206w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-padded figure-shadowed">
 						<figcaption>TV Programmas sākumlapa</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV atgādinājumi" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png 1104w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="TV atgādinājumi" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder.png 1104w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma-reminder@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-padded figure-shadowed">
 						<figcaption>TV Programmas atgādinājuma pievienošana</figcaption>
 					</figure>
 				</div>
@@ -74,7 +74,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="TV Programma Šodien" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png 1010w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien@2x.png 2020w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="TV Programma Šodien" src="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png" srcset="/img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien.png 1010w, /img/portfolio/draugiem/draugiem-desktop-tvprogramma-sodien@2x.png 2020w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-padded figure-shadowed">
 						<figcaption>TV Programmas kartiņa sadaļā &ldquo;Šodien&rdquo;</figcaption>
 					</figure>
 				</div>
@@ -89,7 +89,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Mūzikas atskaņotājs" src="/img/portfolio/draugiem/draugiem-desktop-muzika.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika.png 1104w, /img/portfolio/draugiem/draugiem-desktop-muzika@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Mūzikas atskaņotājs" src="/img/portfolio/draugiem/draugiem-desktop-muzika.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika.png 1104w, /img/portfolio/draugiem/draugiem-desktop-muzika@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-padded figure-shadowed">
 						<figcaption>Mūzikas atskaņotājs</figcaption>
 					</figure>
 				</div>
@@ -98,7 +98,7 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Runā ieraksts" src="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png 1104w, /img/portfolio/draugiem/draugiem-desktop-muzika-runa@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Runā ieraksts" src="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png" srcset="/img/portfolio/draugiem/draugiem-desktop-muzika-runa.png 1104w, /img/portfolio/draugiem/draugiem-desktop-muzika-runa@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-padded figure-shadowed">
 						<figcaption>Runā ieraksts publicējot jaunu dziesmu</figcaption>
 					</figure>
 				</div>
@@ -151,13 +151,13 @@ nextPost: /portfolio/bruklene
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Braucam kopā" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png" class="figure-bordered figure-padded figure-shadowed" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png 1104w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw">
+						<img alt="Braucam kopā" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png" class="figure-padded figure-shadowed" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa.png 1104w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw">
 						<figcaption>&ldquo;Braucam kopā&rdquo; sadaļas sākumlapa</figcaption>
 					</figure>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Jauns brauciens" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png 1104w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-bordered figure-padded figure-shadowed">
+						<img alt="Jauns brauciens" src="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png" srcset="/img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new.png 1104w, /img/portfolio/draugiem/draugiem-desktop-braucam-kopa-new@2x.png 2208w" sizes="(max-width: 1300px) 90vw, 70vw" class="figure-padded figure-shadowed">
 						<figcaption>Jauna brauciena pievienošana</figcaption>
 					</figure>
 				</div>
